--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Toxic Relationships - Am I Overreacting? #7</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN: WHO IS THE BEST LIAR</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>High-Energy Leaves | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>The Most Clutch Moment In Sidemen Among Us History</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>High-Energy Leaves | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Toxic Relationships - Am I Overreacting? #7</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN: WHO IS THE BEST LIAR</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10320,7 +10320,7 @@
                         <div class="video-info">
                             <h3>The Most Clutch Moment In Sidemen Among Us History</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
